--- a/Host - WN Cafe.yaml
+++ b/Host - WN Cafe.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.0+545
+version: 1.1.4+593
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -53,33 +53,23 @@ dependencies:
   websafe_svg: ^2.1.2+1
   sizer: ^2.0.15
   feather_icons: ^1.2.0
-  switcher_button: ^0.0.4
-  simple_switch: ^1.0.1
   webview_flutter: ^3.0.4
   cached_network_image: ^3.2.1
   flutter_barcode_listener: ^0.1.3
-
-  charset_converter: ^2.0.0
-  diacritic: ^0.1.3
   timeago: ^3.1.0
   easy_localization: ^3.0.0
   package_info_plus: ^1.4.0
   mdi: ^4.0.0
   share_plus: ^4.0.3
   drag_and_drop_gridview: ^1.0.8
-  slide_digital_clock: ^1.0.2
-  grouped_list: ^4.2.0
+  # slide_digital_clock: ^1.0.2
   collection: ^1.15.0
-  new_version: ^0.3.0
   device_info_plus: ^3.2.2
-  signal_strength_indicator: ^0.4.1
   connectivity_plus: ^2.2.1
   # epson_epos: ^0.0.1+7
   esc_pos_printer: ^4.1.0
   esc_pos_bluetooth: ^0.4.1
   esc_pos_utils: ^1.1.0
-  dio_smart_retry: ^1.2.0
-  crypto: ^3.0.1
   network_info_plus: ^2.1.3
   table_layout:
     path: packages/table_layout
@@ -93,7 +83,6 @@ dependencies:
   queue: ^3.1.0+1
 
   carousel_slider: ^4.1.1
-  animated_snack_bar: ^0.2.2
   barcode_widget: ^2.0.1
   r_upgrade: ^0.3.8+2
   yaml: ^3.1.1
