--- a/POS - Kopi Arasta.yaml
+++ b/POS - Kopi Arasta.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.4+589
+version: 1.1.5+594
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -88,6 +88,7 @@ dependencies:
   yaml: ^3.1.1
   vertical_scrollable_tabview: ^0.0.7
   regexed_validator: ^2.0.0+1
+  flutter_styled_toast: ^2.1.3
 
 dev_dependencies:
   flutter_test:
