--- a/POS - Kopi Arasta.yaml
+++ b/POS - Kopi Arasta.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.6+596
+version: 1.1.8+607
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -19,7 +19,6 @@ dependencies:
   cupertino_icons: ^1.0.5
   dio: ^4.0.6
   json_annotation: ^4.6.0
-  get_storage: ^2.0.3
   provider: ^6.0.3
   firebase_core: ^1.20.0
   firebase_messaging: ^11.4.4
@@ -89,6 +88,9 @@ dependencies:
   vertical_scrollable_tabview: ^0.0.7
   regexed_validator: ^2.0.0+1
   flutter_styled_toast: ^2.1.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  audioplayers: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -97,6 +99,7 @@ dev_dependencies:
   json_serializable: ^6.1.5
   flutter_gen_runner: ^4.1.6
   icons_launcher: ^1.1.8
+  hive_generator: ^1.1.3
 
 # dependency_overrides:
 #   firebase_messaging_platform_interface: 3.1.6
