--- a/POS - WN Cafe.yaml
+++ b/POS - WN Cafe.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.13+638
+version: 1.1.14+645
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -28,7 +28,7 @@ dependencies:
   flutter_local_notifications: ^9.7.0
   community_material_icon: ^5.9.55
   qr_flutter: ^4.0.0
-  scan: ^1.6.0
+  scan:
   badges: ^2.0.3
 
   intl: ^0.17.0
