--- a/Waiters - WN Cafe.yaml
+++ b/Waiters - WN Cafe.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.17+666
+version: 1.1.19+677
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -67,7 +67,6 @@ dependencies:
   connectivity_plus: ^2.2.1
   # epson_epos: ^0.0.1+7
   esc_pos_printer: ^4.1.0
-  esc_pos_bluetooth: ^0.4.1
   esc_pos_utils: ^1.1.0
   network_info_plus: ^2.1.3
   table_layout:
@@ -92,6 +91,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   audioplayers: ^1.0.1
+  # flutter_bluetooth_basic: ^0.1.7
 
 dev_dependencies:
   flutter_test:
