--- a/Host - WN Cafe.yaml
+++ b/Host - WN Cafe.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.16+660
+version: 1.1.20+686
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -61,13 +61,10 @@ dependencies:
   mdi: ^4.0.0
   share_plus: ^4.0.3
   drag_and_drop_gridview: ^1.0.8
-  # slide_digital_clock: ^1.0.2
   collection: ^1.15.0
   device_info_plus: ^3.2.2
   connectivity_plus: ^2.2.1
-  # epson_epos: ^0.0.1+7
   esc_pos_printer: ^4.1.0
-  esc_pos_bluetooth: ^0.4.1
   esc_pos_utils: ^1.1.0
   network_info_plus: ^2.1.3
   table_layout:
@@ -92,6 +89,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   audioplayers: ^1.0.1
+  # flutter_bluetooth_basic: ^0.1.7
 
 dev_dependencies:
   flutter_test:
