--- a/POS - Kopi Arasta.yaml
+++ b/POS - Kopi Arasta.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.12+622
+version: 1.1.21+717
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -28,7 +28,7 @@ dependencies:
   flutter_local_notifications: ^9.7.0
   community_material_icon: ^5.9.55
   qr_flutter: ^4.0.0
-  scan: ^1.6.0
+  scan:
   badges: ^2.0.3
 
   intl: ^0.17.0
@@ -61,13 +61,10 @@ dependencies:
   mdi: ^4.0.0
   share_plus: ^4.0.3
   drag_and_drop_gridview: ^1.0.8
-  # slide_digital_clock: ^1.0.2
   collection: ^1.15.0
   device_info_plus: ^3.2.2
   connectivity_plus: ^2.2.1
-  # epson_epos: ^0.0.1+7
   esc_pos_printer: ^4.1.0
-  esc_pos_bluetooth: ^0.4.1
   esc_pos_utils: ^1.1.0
   network_info_plus: ^2.1.3
   table_layout:
@@ -78,7 +75,8 @@ dependencies:
   in_app_update: ^3.0.0
   presentation_displays: ^0.2.3
   file_selector: ^0.8.4+2
-  blue_thermal_printer: 1.2.3
+  blue_thermal_printer:
+    path: packages/blue_thermal_printer
   queue: ^3.1.0+1
 
   carousel_slider: ^4.1.1
@@ -91,6 +89,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   audioplayers: ^1.0.1
+  mobile_scanner: ^2.0.0
+  # flutter_bluetooth_basic: ^0.1.7
 
 dev_dependencies:
   flutter_test:
