--- a/Host - WN Cafe.yaml
+++ b/Host - WN Cafe.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.24+744
+version: 1.1.24+770
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -86,6 +86,9 @@ dependencies:
   hive_flutter: ^1.1.0
   audioplayers: ^1.0.1
   mobile_scanner: ^2.0.0
+  flutter_native_splash: ^2.2.10+1
+  url_strategy: ^0.2.0
+  flutter_secure_storage: ^6.0.0
   # flutter_bluetooth_basic: ^0.1.7
 
 dev_dependencies:
@@ -105,6 +108,7 @@ flutter_icons:
   android: true
   ios: false
   macos: true
+  web: true
   image_path: "assets/icon/logo.png"
   image_path_ios: "assets/icon/logo.png"
   image_path_macos: "assets/icon/logo_rounded.png"
