--- a/POS - WN Cafe.yaml
+++ b/POS - WN Cafe.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.2.0+781
+version: 1.2.5+790
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -89,6 +89,7 @@ dependencies:
   flutter_native_splash: ^2.2.10+1
   url_strategy: ^0.2.0
   flutter_secure_storage: ^6.0.0
+  screen_brightness: ^0.2.2
   # flutter_bluetooth_basic: ^0.1.7
 
 dev_dependencies:
