--- a/POS - Aftobar.yaml
+++ b/POS - Aftobar.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.12+623
+version: 1.2.8+811
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -25,10 +25,8 @@ dependencies:
   # firebase_performance: ^0.8.2+1
   # firebase_crashlytics: ^2.8.6
   firebase_analytics: ^9.3.0
-  flutter_local_notifications: ^9.7.0
   community_material_icon: ^5.9.55
   qr_flutter: ^4.0.0
-  scan: ^1.6.0
   badges: ^2.0.3
 
   intl: ^0.17.0
@@ -38,7 +36,6 @@ dependencies:
   url_launcher: ^6.0.17
   flutter_device_type: ^0.4.0
   shimmer: ^2.0.0
-  flutter_countdown_timer: ^4.1.0
   uuid: ^3.0.5
   scrollable_list_tabview:
     path: packages/scrollable_list_tabview-0.1.6
@@ -50,7 +47,6 @@ dependencies:
   dio_cache_interceptor: ^3.3.0
   numeric_keyboard: ^1.1.0
   websafe_svg: ^2.1.2+1
-  sizer: ^2.0.15
   feather_icons: ^1.2.0
   webview_flutter: ^3.0.4
   cached_network_image: ^3.2.1
@@ -61,13 +57,10 @@ dependencies:
   mdi: ^4.0.0
   share_plus: ^4.0.3
   drag_and_drop_gridview: ^1.0.8
-  # slide_digital_clock: ^1.0.2
   collection: ^1.15.0
   device_info_plus: ^3.2.2
   connectivity_plus: ^2.2.1
-  # epson_epos: ^0.0.1+7
   esc_pos_printer: ^4.1.0
-  esc_pos_bluetooth: ^0.4.1
   esc_pos_utils: ^1.1.0
   network_info_plus: ^2.1.3
   table_layout:
@@ -78,7 +71,8 @@ dependencies:
   in_app_update: ^3.0.0
   presentation_displays: ^0.2.3
   file_selector: ^0.8.4+2
-  blue_thermal_printer: 1.2.3
+  blue_thermal_printer:
+    path: packages/blue_thermal_printer
   queue: ^3.1.0+1
 
   carousel_slider: ^4.1.1
@@ -91,6 +85,13 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   audioplayers: ^1.0.1
+  mobile_scanner: ^2.0.0
+  flutter_native_splash: ^2.2.10+1
+  url_strategy: ^0.2.0
+  flutter_secure_storage: ^6.0.0
+  screen_brightness: ^0.2.2
+  flutter_esc_pos_utils: ^0.1.8
+  # flutter_bluetooth_basic: ^0.1.7
 
 dev_dependencies:
   flutter_test:
@@ -109,6 +110,7 @@ flutter_icons:
   android: true
   ios: false
   macos: true
+  web: true
   image_path: "assets/icon/logo.png"
   image_path_ios: "assets/icon/logo.png"
   image_path_macos: "assets/icon/logo_rounded.png"
