--- a/Waiters - WN Cafe.yaml
+++ b/Waiters - WN Cafe.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.2.9+818
+version: 1.3.0+825
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -24,7 +24,7 @@ dependencies:
   firebase_messaging: ^11.4.4
   # firebase_performance: ^0.8.2+1
   # firebase_crashlytics: ^2.8.6
-  firebase_analytics: ^9.3.0
+  # firebase_analytics: ^9.3.0
   community_material_icon: ^5.9.55
   qr_flutter: ^4.0.0
   badges: ^2.0.3
@@ -91,6 +91,7 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   screen_brightness: ^0.2.2
   flutter_esc_pos_utils: ^0.1.8
+  currency_text_input_formatter: ^2.1.7
   # flutter_bluetooth_basic: ^0.1.7
 
 dev_dependencies:
