--- a/Kitchen - WN Cafe.yaml
+++ b/Kitchen - WN Cafe.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.3.0+826
+version: 1.3.1+831
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -92,6 +92,7 @@ dependencies:
   screen_brightness: ^0.2.2
   flutter_esc_pos_utils: ^0.1.8
   currency_text_input_formatter: ^2.1.7
+  flutter_ringtone_player: ^3.2.0
   # flutter_bluetooth_basic: ^0.1.7
 
 dev_dependencies:
