--- a/POS - Lobby Garden.yaml
+++ b/POS - Lobby Garden.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.4.3+943
+version: 1.4.6+972
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -111,7 +111,7 @@ dev_dependencies:
 #   analyzer: 3.4.1
 
 icons_launcher:
-  image_path: "assets/icon/logo.png"
+  image_path: "assets/icon/logo_rounded.png"
   platforms:
     android:
       enable: true
