--- a/Host - WN Cafe.yaml
+++ b/Host - WN Cafe.yaml
@@ -5,7 +5,7 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.3.4+846
+version: 1.4.4+956
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -20,10 +20,10 @@ dependencies:
   dio: ^4.0.6
   json_annotation: ^4.6.0
   provider: ^6.0.3
-  firebase_core: ^1.20.0
-  firebase_messaging: ^11.4.4
+  firebase_core: ^2.1.1
+  firebase_messaging: ^14.0.3
   # firebase_performance: ^0.8.2+1
-  # firebase_crashlytics: ^2.8.6
+  firebase_crashlytics: ^3.0.3
   # firebase_analytics: ^9.3.0
   community_material_icon: ^5.9.55
   qr_flutter: ^4.0.0
@@ -31,7 +31,7 @@ dependencies:
 
   intl: ^0.17.0
 
-  fcm_config: ^3.3.7
+  fcm_config: ^3.5.0
   syncfusion_flutter_sliders: ^20.1.47
   url_launcher: ^6.0.17
   flutter_device_type: ^0.4.0
@@ -52,17 +52,17 @@ dependencies:
   cached_network_image: ^3.2.1
   flutter_barcode_listener: ^0.1.3
   timeago: ^3.1.0
-  easy_localization: ^3.0.0
-  package_info_plus: ^1.4.0
+  easy_localization: ^3.0.1
+  package_info_plus: ^3.0.1
   mdi: ^4.0.0
-  share_plus: ^4.0.3
+  share_plus: ^6.2.0
   drag_and_drop_gridview: ^1.0.8
-  collection: ^1.15.0
-  device_info_plus: ^3.2.2
-  connectivity_plus: ^2.2.1
+  collection: ^1.16.0
+  device_info_plus: ^8.0.0
+  connectivity_plus: ^3.0.2
   esc_pos_printer: ^4.1.0
   esc_pos_utils: ^1.1.0
-  network_info_plus: ^2.1.3
+  network_info_plus: ^3.0.1
   table_layout:
     path: packages/table_layout
   image_picker: ^0.8.5+3
@@ -70,7 +70,7 @@ dependencies:
   flutter_toastr: ^1.0.3
   in_app_update: ^3.0.0
   presentation_displays: ^0.2.3
-  file_selector: ^0.8.4+2
+  file_selector: ^0.9.2+2
   blue_thermal_printer:
     path: packages/blue_thermal_printer
   queue: ^3.1.0+1
@@ -88,11 +88,13 @@ dependencies:
   mobile_scanner: ^2.0.0
   flutter_native_splash: ^2.2.10+1
   url_strategy: ^0.2.0
-  flutter_secure_storage: ^6.0.0
   screen_brightness: ^0.2.2
   flutter_esc_pos_utils: ^0.1.8
   currency_text_input_formatter: ^2.1.7
   flutter_ringtone_player: ^3.2.0
+  flutter_secure_storage: ^6.0.0
+  percent_indicator: ^3.4.0
+  image_cropper: ^3.0.1
   # flutter_bluetooth_basic: ^0.1.7
 
 dev_dependencies:
@@ -100,27 +102,40 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.1.8
   json_serializable: ^6.1.5
-  flutter_gen_runner: ^4.1.6
-  icons_launcher: ^1.1.8
-  hive_generator: ^1.1.3
+  flutter_gen_runner: ^5.1.0+1
+  icons_launcher: ^2.0.5
+  hive_generator: ^2.0.0
 
 # dependency_overrides:
 #   firebase_messaging_platform_interface: 3.1.6
 #   analyzer: 3.4.1
 
-flutter_icons:
-  android: true
-  ios: false
-  macos: true
-  web: true
-  image_path: "assets/icon/logo.png"
-  image_path_ios: "assets/icon/logo.png"
-  image_path_macos: "assets/icon/logo_rounded.png"
-  adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/icon/logo.png"
-  adaptive_icon_round: "assets/icon/logo_rounded.png"
-  remove_alpha_ios: true
-  remove_alpha_macos: true
+icons_launcher:
+  image_path: "assets/icon/logo_rounded.png"
+  platforms:
+    android:
+      enable: true
+      image_path: "assets/icon/logo.png"
+      adaptive_background_color: '#ffffff'
+      # adaptive_background_image: 'assets/ic_background.png'
+      adaptive_foreground_image: "assets/icon/logo.png"
+      adaptive_round_image: "assets/icon/logo.png"
+    ios:
+      enable: true
+      image_path: "assets/icon/logo.png"
+    web:
+      enable: true
+      image_path: "assets/icon/logo_rounded.png"
+      favicon_path: "assets/icon/logo_rounded.png"
+    macos:
+      enable: false
+      image_path: "assets/icon/logo_rounded.png"
+    windows:
+      enable: false
+      image_path: "assets/icon/logo_rounded.png"
+    linux:
+      enable: false
+      image_path: "assets/icon/logo_rounded.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
